grammar.js
    generic_list: ($) => seq("[", commaSep1($.generic_type2), "]"),
    generic_type2: ($) =>
      seq($.identifier, optional(seq(":", sep1($.identifier, "&")))),
    type2: ($) => seq($.identifier, optional("?")),


    record: ($) =>
      seq(
        "record",
        field("name", $.identifier),
        field("generics", optional($.generic_list)),
        field("fields", seq("(", commaSep1($.record_field), ")"))
      ),

    record_field: ($) =>
      seq(field("name", $.identifier), ":", field("type", $.type2)),

    trait: ($) =>
      seq(
        "trait",
        field("name", $.identifier),
        field("generics", optional($.generic_list)),
        field("fields", seq("(", repeat($.trait_field), ")"))
      ),

    trait_field: $ => seq(
      'fn',
      field('name', $.identifier),
      field('params', seq('(', optional(commaSep1($.param)), ')')),
      ':',
      field('returns', optional(commaSep1($.type2))),
    ),

    param: $ => seq(
      field('name', $.identifier),
      ':',
      field('type', $.type2)
    ),

    enum: ($) =>
      seq(
        "enum",
        field("name", $.identifier),
        "=",
        field("fields", repeat($.enum_field))
      ),

    enum_field: ($) =>
      seq("|", field("name", $.identifier), "(", commaSep1($.identifier), ")"),

    _statement: ($) => choice($._simple_statements, $._compound_statement),

    _expressions: ($) => choice($.expression, $.expression_list),

    pass_statement: (_) => prec.left("pass"),
    for_statement: ($) =>
      seq(
        optional("async"),
        "for",
        field("left", $._left_hand_side),
        "in",
        field("right", $._expressions),
        ":",
        field("body", $._suite),
        field("alternative", optional($.else_clause))
      ),

    while_statement: ($) =>
      seq(
        "while",
        field("condition", $.expression),
        ":",
        field("body", $._suite),
        optional(field("alternative", $.else_clause))
      ),

    argument_list: ($) =>
      seq(
        "(",
        optional(
          commaSep1(
            choice(
              $.expression,
              $.list_splat,
              $.dictionary_splat,
              alias($.parenthesized_list_splat, $.parenthesized_expression),
              $.keyword_argument
            )
          )
        ),
        optional(","),
        ")"
      ),

    _suite: ($) =>
      choice(
        alias($._simple_statements, $.block),
        seq($._indent, $.block),
        alias($._newline, $.block)
      ),

    block: ($) => seq(repeat($._statement), $._dedent),

    boolean_operator: ($) =>
      choice(
        prec.left(
          PREC.and,
          seq(
            field("left", $.expression),
            field("operator", "and"),
            field("right", $.expression)
          )
        ),
        prec.left(
          PREC.or,
          seq(
            field("left", $.expression),
            field("operator", "or"),
            field("right", $.expression)
          )
        )
      ),

    comparison_operator: ($) =>
      prec.left(
        PREC.compare,
        seq(
          $.primary_expression,
          repeat1(
            seq(
              field(
                "operators",
                choice(
                  "<",
                  "<=",
                  "==",
                  "!=",
                  ">=",
                  ">",
                  "<>",
                  "in",
                  alias(seq("not", "in"), "not in"),
                  "is",
                  alias(seq("is", "not"), "is not")
                )
              ),
              $.primary_expression
            )
          )
        )
      ),

    lambda: ($) =>
      prec(
        PREC.lambda,
        seq(
          "lambda",
          field("parameters", optional($.lambda_parameters)),
          ":",
          field("body", $.expression)
        )
      ),

    _left_hand_side: ($) => choice($.pattern, $.pattern_list),

    call: ($) =>
      prec(
        PREC.call,
        seq(
          field("function", $.primary_expression),
          field("arguments", choice($.generator_expression, $.argument_list))
        )
      ),

    string: ($) =>
      seq(
        $.string_start,
        repeat(choice($.interpolation, $.string_content)),
        $.string_end
      ),

    integer: (_) =>
      token(
        choice(
          seq(choice("0x", "0X"), repeat1(/_?[A-Fa-f0-9]+/), optional(/[Ll]/)),
          seq(choice("0o", "0O"), repeat1(/_?[0-7]+/), optional(/[Ll]/)),
          seq(choice("0b", "0B"), repeat1(/_?[0-1]+/), optional(/[Ll]/)),
          seq(
            repeat1(/[0-9]+_?/),
            choice(
              optional(/[Ll]/), // long numbers
              optional(/[jJ]/) // complex numbers
            )
          )
        )
      ),

    float: (_) => {
      const digits = repeat1(/[0-9]+_?/);
      const exponent = seq(/[eE][\+-]?/, digits);

      return token(
        seq(
          choice(
            seq(digits, ".", optional(digits), optional(exponent)),
            seq(optional(digits), ".", digits, optional(exponent)),
            seq(digits, exponent)
          ),
          optional(choice(/[Ll]/, /[jJ]/))
        )
      );
    },

    identifier: (_) => /[_\p{XID_Start}][_\p{XID_Continue}]*/,

    true: (_) => "True",
