test/corpus/constants.txt
================================================================================
Constants
================================================================================

START_YEAR = 2101
PI = 3.14159
NAME = "pacos"
DEBUG_ENABLED = true
COUNT = count(10)
COUNTRIES_LIST = list.of("US", "INDIA", "CANADA")
COUNTRY_CODES = map.of(
  "in" => "INDIA",
  "us" => "United States",
  "ca" => "Canada"
)

--------------------------------------------------------------------------------

(source
  (const
    (const_identifier)
    (integer))
  (const
    (const_identifier)
    (float))
  (const
    (const_identifier)
    (string
      (string_start)
      (string_end)))
  (const
    (const_identifier)
    (true))
  (const
    (const_identifier)
    (call
      (reference
        (identifier))
      (argument_list
        (integer))))
  (const
    (const_identifier)
    (call
      (reference
        (identifier)
        (identifier))
      (argument_list
        (string
          (string_start)
          (string_end))
        (string
          (string_start)
          (string_end))
        (string
          (string_start)
          (string_end)))))
  (const
    (const_identifier)
    (call
      (reference
        (identifier)
        (identifier))
      (argument_list
        (pair_argument
          (string
            (string_start)
            (string_end))
          (string
            (string_start)
            (string_end)))
        (pair_argument
          (string
            (string_start)
            (string_end))
          (string
            (string_start)
            (string_end)))
        (pair_argument
          (string
            (string_start)
            (string_end))
          (string
            (string_start)
            (string_end)))))))
