test/corpus/loop.txt
================================================================================
For
================================================================================

test("for") |t|
  for i := range 10
    pass

  for i := range n
    pass

  for k, v := range data
    pass

  for v := range data.list
    pass

  for i, v := range list.of(1, 2, 3)
    pass

  for k, v := range map.of("a" => 1, "b" => 2)
    pass

--------------------------------------------------------------------------------

(source
  (test
    (string
      (string_start)
      (string_end))
    (lambda
      (identifier)
      (body
        (for_statement
          (identifier)
          (integer)
          (body
            (pass_statement)))
        (for_statement
          (identifier)
          (identifier)
          (body
            (pass_statement)))
        (for_statement
          (identifier)
          (identifier)
          (identifier)
          (body
            (pass_statement)))
        (for_statement
          (identifier)
          (ERROR
            (reference
              (identifier)
              (identifier))
            (identifier)
            (identifier))
          (identifier)
          (call
            (reference
              (identifier)
              (identifier))
            (argument_list
              (integer)
              (integer)
              (integer)))
          (body
            (pass_statement)))
        (for_statement
          (identifier)
          (identifier)
          (call
            (reference
              (identifier)
              (identifier))
            (argument_list
              (pair_argument
                (string
                  (string_start)
                  (string_end))
                (integer))
              (pair_argument
                (string
                  (string_start)
                  (string_end))
                (integer))))
          (body
            (pass_statement)))))))

================================================================================
while
================================================================================

test("while") |t|
  while true
    pass

  while i < 9
    pass

  while a > b && c < d
    pass

--------------------------------------------------------------------------------

(source
  (test
    (string
      (string_start)
      (string_end))
    (lambda
      (identifier)
      (body
        (while_statement
          (true)
          (block
            (pass_statement)))
        (while_statement
          (comparison_operator
            (identifier)
            (integer))
          (block
            (pass_statement)))
        (while_statement
          (boolean_operator
            (comparison_operator
              (identifier)
              (identifier))
            (comparison_operator
              (identifier)
              (identifier)))
          (block
            (pass_statement)))))))
